--- a/style/style.css
+++ b/style/style.css
@@ -6,18 +6,29 @@ html,body{
     margin: 2% 2% 2% 2%;
     height: 100%;
     width: 100%;
-    background-color: darkcyan;
+    background-color: black;
 }
-.header{
+.header h3{
     margin-left: 5%;
     margin-right: 5%;
     width: auto;
     height: 10%;
     background-color: aqua;
+    text-align: center;
+    font-size: 8vh;
+}
+.mainContent{
+    margin: 1%;
+    height: 90%;
+    background-color: dimgrey;
 }
 .gamediv{
     margin: 10% 10% 10% 10%;
     height: auto;
     width: auto;
     background-color: aliceblue;
+}
+.footer{
+    color: aliceblue;
+    text-align: right;
 }
