bootstrap css override
in head of page add yours own css file :)
simple enough :alien:

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,20 @@
+h1{
+    color: aqua;
+    background-color: brown;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 html,body{
     background-color: black;
     height: 100%;
@@ -32,3 +49,5 @@ html,body{
     color: aliceblue;
     text-align: right;
 }
+*/
+
