--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,30 @@
-h1{
-    color: aqua;
+/*h1{
+    padding top: 5vh;
+    height: 20vh;    
+    text-align: center;    
+    color: darkblue;
+    background:url(../image/1.gif) no-repeat center center;
+    
     background-color: brown;
+    background: url(../image/1.gif) ;
+    background-repeat: no-repeat ;
+    background-attachment: fixed;
+    background-position: center;
+}*/
+
+.bg {
+  background: url(../image/1.gif) no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 350px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
 }
+.header{
+    /*background: url(../image/1.gif);*/
 
-
-
-
+}
 
 
 
